airflow/logs/dag_id=nyctaxi_elt/run_id=manual__2024-02-06T05:22:42.124267+00:00/task_id=create_monthly_trips/attempt=1.log
[2024-02-06T05:22:52.057+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:22:42.124267+00:00 [queued]>
[2024-02-06T05:22:52.068+0000] {taskinstance.py:1171} INFO - Dependencies all met for <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:22:42.124267+00:00 [queued]>
[2024-02-06T05:22:52.069+0000] {taskinstance.py:1368} INFO - 
--------------------------------------------------------------------------------
[2024-02-06T05:22:52.069+0000] {taskinstance.py:1369} INFO - Starting attempt 1 of 1
[2024-02-06T05:22:52.070+0000] {taskinstance.py:1370} INFO - 
--------------------------------------------------------------------------------
[2024-02-06T05:22:52.083+0000] {taskinstance.py:1389} INFO - Executing <Task(PostgresOperator): create_monthly_trips> on 2024-02-06 05:22:42.124267+00:00
[2024-02-06T05:22:52.092+0000] {standard_task_runner.py:52} INFO - Started process 21341 to run task
[2024-02-06T05:22:52.094+0000] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'nyctaxi_elt', 'create_monthly_trips', 'manual__2024-02-06T05:22:42.124267+00:00', '--job-id', '38', '--raw', '--subdir', 'DAGS_FOLDER/nyctaxi_elt.py', '--cfg-path', '/tmp/tmpd6f8rgzj', '--error-file', '/tmp/tmpq1uzh9rh']
[2024-02-06T05:22:52.095+0000] {standard_task_runner.py:80} INFO - Job 38: Subtask create_monthly_trips
[2024-02-06T05:22:52.189+0000] {task_command.py:371} INFO - Running <TaskInstance: nyctaxi_elt.create_monthly_trips manual__2024-02-06T05:22:42.124267+00:00 [running]> on host 9d3dd91d9998
[2024-02-06T05:22:52.331+0000] {taskinstance.py:1583} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Aldy
AIRFLOW_CTX_DAG_ID=nyctaxi_elt
AIRFLOW_CTX_TASK_ID=create_monthly_trips
AIRFLOW_CTX_EXECUTION_DATE=2024-02-06T05:22:42.124267+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-02-06T05:22:42.124267+00:00
[2024-02-06T05:22:52.350+0000] {base.py:68} INFO - Using connection ID '***_postgres' for task execution.
[2024-02-06T05:22:52.355+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS daily_trip_summary AS
            SELECT 
                extract(month from lpep_pickup_datetime) as date,
                COUNT(*) AS total_trips,
                SUM(EXTRACT(EPOCH FROM (lpep_dropoff_datetime - lpep_pickup_datetime))) AS total_duration,
                AVG(EXTRACT(EPOCH FROM (lpep_dropoff_datetime - lpep_pickup_datetime))) AS avg_duration,
                SUM(passenger_count) AS total_passenger,
                AVG(passenger_count) AS avg_passenger,
                SUM(fare_amount) AS total_fares,
                AVG(fare_amount) AS avg_fares,
                COUNT(tip_amount) AS count_tips,
                SUM(tip_amount) AS total_tips,
                AVG(tip_amount) AS avg_tips,
                SUM(improvement_surcharge+congestion_surcharge) AS total_surcharge,
                MAX(payment_type) AS most_payment_type
            FROM 
                nyc_taxi
            GROUP BY 
                extract(month from lpep_pickup_datetime) as date,, parameters: None
[2024-02-06T05:22:52.357+0000] {taskinstance.py:1902} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "as"
LINE 19: ...           extract(month from lpep_pickup_datetime) as date,
                                                                ^

[2024-02-06T05:22:52.403+0000] {taskinstance.py:1412} INFO - Marking task as FAILED. dag_id=nyctaxi_elt, task_id=create_monthly_trips, execution_date=20240206T052242, start_date=20240206T052252, end_date=20240206T052252
[2024-02-06T05:22:52.416+0000] {standard_task_runner.py:97} ERROR - Failed to execute job 38 for task create_monthly_trips (syntax error at or near "as"
LINE 19: ...           extract(month from lpep_pickup_datetime) as date,
                                                                ^
; 21341)
[2024-02-06T05:22:52.432+0000] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-02-06T05:22:52.463+0000] {local_task_job.py:279} INFO - 0 downstream tasks scheduled from follow-on schedule check
